--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Gustavo Augusto <gacl@ic.ufal.br>",
   "license": "MIT",
   "scripts": {
-    "dev:server": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts"
+    "dev:server": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts"
   },
   "dependencies": {
     "express": "^4.17.1"
@@ -23,6 +23,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.1.2",
     "ts-node-dev": "^1.0.0-pre.63",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.0.3"
   }
 }
