--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev:server": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "tsyringe": "^4.3.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
