--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "pg": "^8.3.3",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.3.0",
-    "typeorm": "^0.2.26"
+    "typeorm": "^0.2.26",
+    "uuidv4": "^6.2.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
