--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "class-transformer": "^0.3.1",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "pg": "^8.3.3",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.3.0",
@@ -19,6 +22,7 @@
     "uuidv4": "^6.2.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.14",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
